# mini-rag

./: .env.example  README.md  pyproject.toml
App/: main.py
App/api/: routers.py
App/core/: Config.py  logging.py
App/docker/: Dockerfile  docker-compose.yml
App/embedding/: embedder.py
App/ingestion/: chunker.py  loader.py
App/models/: schemas.py
App/rag/: chain.py  llm.py  retriever.py
App/scripts/: ingest.py
App/vectorestore/: store.py
